--- a/platformio.ini
+++ b/platformio.ini
@@ -1,32 +1,51 @@
-; PlatformIO Project Configuration File
-;
-;   Build options: build flags, source filter
-;   Upload options: custom upload port, speed and extra flags
-;   Library options: dependencies, extra library storages
-;   Advanced options: extra scripting
-;
-; Please visit documentation for the other options and examples
-; https://docs.platformio.org/page/projectconf.html
+; PlatformIO Project Configuration File for BINSAI IoT System
+; Yogyakarta Smart Waste Management Research - ISPO 2026
+; ESP32-based Multi-Sensor Telemetry System
 
 [env:esp32dev]
 platform = espressif32
 board = esp32dev
 framework = arduino
 monitor_speed = 115200
+
+; Library Dependencies (optimized for stability)
 lib_deps = 
-	blynkkk/blynk-library@^1.4.0
-	wire
-	blynkkk/Blynk@^1.3.2
-	mikalhart/TinyGPSPlus@^1.1.0
-	marcoschwartz/LiquidCrystal_I2C@^1.1.4
+    blynkkk/Blynk@^1.4.0            # IoT Cloud Platform
+    mikalhart/TinyGPSPlus@^1.1.0     # GPS Parsing Library
+    marcoschwartz/LiquidCrystal_I2C@^1.1.4  # LCD Interface
+    adafruit/Adafruit MQ135 Library@^1.0.0  # Gas Sensor Calibration
+
+; Build Configuration
 build_flags = 
-	-Iinclude
-	-Wall
-	-Werror
-	-D BLYNK_PRINT=Serial
-upload_port = COM3
+    -Iinclude
+    -Wall
+    -Werror
+    -DBLYNK_PRINT=Serial
+    -DBLYNK_USE_SSL
+    -DBLYNK_TIMEOUT_MS=3000
+    -DARDUINO_JSON_BUFFER_SIZE=1024
+
+; Upload Configuration (disesuaikan dengan environment)
+; upload_port = COM3  ; COMMENTED FOR PORTABILITY
 upload_speed = 921600
+upload_protocol = esptool
+
+; Monitor Configuration
 monitor_filters = 
-	direct
-	time
-	colorize
+    direct
+    time
+    esp32_exception_decoder
+
+; Debug Configuration
+debug_tool = esp-prog
+debug_port = ${env.upload_port}
+
+; Extended Configuration for Research Environment
+[env:esp32dev:research]
+monitor_speed = 500000
+build_type = debug
+build_flags = ${env.build_flags} -DDEBUG_MODE=1
+
+[env:esp32dev:deployment]
+build_type = release
+build_flags = ${env.build_flags} -DRELEASE_MODE=1 -DBLYNK_AUTH_TOKEN="YOUR_TOKEN_HERE"
